修改招标科长、统计人员能看所有进度、台账功能 完成综合评标法技术、商务可选前端修改

--- a/TenderInfo/Views/Account/EditAccountFrame.cshtml
+++ b/TenderInfo/Views/Account/EditAccountFrame.cshtml
@@ -978,7 +978,7 @@
         SetBtnState();
         function SetBtnState() {
             if ($("#userRoleEdit").text().trim() !== "yes") {
-                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd,#btnSixAdd").hide();
+                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
             }
         }
 
