--- a/TenderInfo/Views/Account/EditAccountMaterial.cshtml
+++ b/TenderInfo/Views/Account/EditAccountMaterial.cshtml
@@ -924,7 +924,7 @@
         SetBtnState();
         function SetBtnState() {
             if ($("#userRoleEdit").text().trim() !== "yes") {
-                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
+                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
             }
         }
 
