--- a/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoMaterial.cshtml
@@ -33,115 +33,139 @@
         $("#tbxOtherExplainEdit").val(row.OtherExplain);
         $("#tbxRemarkEdit").val(row.Remark);
 
-        if ($("#userRole").text().trim() != "招标管理") {
-            $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
-        }
+        //if ($("#userRole").text().trim() != "招标管理") {
+        //    $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
+        //}
+
+        $.post("/ProgressInfo/CheckEdit", { "id": id }, function (result) {
+            if (result !== "ok") {
+                $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
+            }
+            else {
+                $("#btnEditProgressSubmit,#btnDelProgressSubmit").show();
+            }
+        });
     };
     var selectModel = function (id) {
-        //根据当前行的id获取当前的行数据
-        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
-        $("#selectMaterialAccountModal").modal("show");
-        $("#lblProgressInfoID").text(row.ProgressInfoID);
-        $("#lblProjectName").text(row.ProjectName);
-        $("#lblProgressTypeChild").text(row.ProgressTypeChild);
-        $("#lblProjectResponsiblePersonName").text(row.ProjectResponsiblePersonName);
+        $.post("/ProgressInfo/CheckEdit", { "id": id }, function (result) {
+            if (result !== "ok") {
+                toastr.error("没有操作权限！","提示");
+            }
+            else {
+                //根据当前行的id获取当前的行数据
+                var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+                $("#selectMaterialAccountModal").modal("show");
+                $("#lblProgressInfoID").text(row.ProgressInfoID);
+                $("#lblProjectName").text(row.ProjectName);
+                $("#lblProgressTypeChild").text(row.ProgressTypeChild);
+                $("#lblProjectResponsiblePersonName").text(row.ProjectResponsiblePersonName);
 
-        //初始化BS-Table
-        $('#bsTableSelectAccount').bootstrapTable({
-            url: '/Account/GetAccountListForSelect',         //请求后台的URL（*）
-            contentType: 'application/x-www-form-urlencoded',
-            method: 'post',                     //请求方式（*）
-            striped: true,                      //是否显示行间隔色
-            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
-            pagination: false,                   //是否显示分页（*）
-            sortable: false,                     //是否启用排序
-            sortOrder: "asc",                   //排序方式
-            sidePagination: "client",           //分页方式：client客户端分页，server服务端分页（*）
-            pageNumber: 1,                       //初始化加载第一页，默认第一页
-            pageSize: 10,                       //每页的记录行数（*）
-            pageList: [5, 10, 15, 20],        //可供选择的每页的行数（*）
-            search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
-            strictSearch: true,
-            showColumns: true,                  //是否显示所有的列
-            showRefresh: true,                  //是否显示刷新按钮
-            minimumCountColumns: 2,             //最少允许的列数
-            clickToSelect: false,                //是否启用点击选中行
-            queryParams: function (params) {
-                var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-                    accountType: row.ProgressType    //进度类型
-                };
-                return temp;
-            },
-            //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-            uniqueId: "AccountID",          //每一行的唯一标识，一般为主键列
-            showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
-            cardView: false,                    //是否显示详细视图
-            detailView: false,                   //是否显示父子表
-            paginationPreText: "上一页",
-            paginationNextText: "下一页",
-            showExport: false,                     //是否显示导出
-            columns: [
-                {
-                    radio: true,
-                    valign: "middle"
-                },
-                {
-                    title: '序号',
-                    valign: "middle",
-                    align: "center",
-                    width: 45,
-                    formatter: function (value, row, index) {
-                        return index + 1;
-                    }
-                },
-                {
-                    field: 'ProjectName',
-                    title: '项目名称',
-                    valign: "middle",
-                    visible: true
-                },
-                {
-                    field: 'TenderFileNum',
-                    title: '项目文件编号',
-                    valign: "middle",
-                    visible: true
-                },
-                {
-                    field: 'IsOnline',
-                    title: '线上/线下',
-                    valign: "middle"
-                },
-                {
-                    field: 'ProjectResponsiblePersonName',
-                    valign: "middle",
-                    title: '招标项目负责人'
-                }
-            ]
+                //初始化BS-Table
+                $('#bsTableSelectAccount').bootstrapTable({
+                    url: '/Account/GetAccountListForSelect',         //请求后台的URL（*）
+                    contentType: 'application/x-www-form-urlencoded',
+                    method: 'post',                     //请求方式（*）
+                    striped: true,                      //是否显示行间隔色
+                    cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
+                    pagination: false,                   //是否显示分页（*）
+                    sortable: false,                     //是否启用排序
+                    sortOrder: "asc",                   //排序方式
+                    sidePagination: "client",           //分页方式：client客户端分页，server服务端分页（*）
+                    pageNumber: 1,                       //初始化加载第一页，默认第一页
+                    pageSize: 10,                       //每页的记录行数（*）
+                    pageList: [5, 10, 15, 20],        //可供选择的每页的行数（*）
+                    search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+                    strictSearch: true,
+                    showColumns: true,                  //是否显示所有的列
+                    showRefresh: true,                  //是否显示刷新按钮
+                    minimumCountColumns: 2,             //最少允许的列数
+                    clickToSelect: false,                //是否启用点击选中行
+                    queryParams: function (params) {
+                        var temp = {   //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+                            accountType: row.ProgressType    //进度类型
+                        };
+                        return temp;
+                    },
+                    //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+                    uniqueId: "AccountID",          //每一行的唯一标识，一般为主键列
+                    showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
+                    cardView: false,                    //是否显示详细视图
+                    detailView: false,                   //是否显示父子表
+                    paginationPreText: "上一页",
+                    paginationNextText: "下一页",
+                    showExport: false,                     //是否显示导出
+                    columns: [
+                        {
+                            radio: true,
+                            valign: "middle"
+                        },
+                        {
+                            title: '序号',
+                            valign: "middle",
+                            align: "center",
+                            width: 45,
+                            formatter: function (value, row, index) {
+                                return index + 1;
+                            }
+                        },
+                        {
+                            field: 'ProjectName',
+                            title: '项目名称',
+                            valign: "middle",
+                            visible: true
+                        },
+                        {
+                            field: 'TenderFileNum',
+                            title: '项目文件编号',
+                            valign: "middle",
+                            visible: true
+                        },
+                        {
+                            field: 'IsOnline',
+                            title: '线上/线下',
+                            valign: "middle"
+                        },
+                        {
+                            field: 'ProjectResponsiblePersonName',
+                            valign: "middle",
+                            title: '招标项目负责人'
+                        }
+                    ]
+                });
+            }
         });
     };
     var DelSynchro = function (id) {
-        //根据当前行的id获取当前的行数据
-        var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
-        var progressID = row.ProgressInfoID;
-        var args = { "progressID": progressID };
-        var accountName = "";
-        $.post("/Account/GetAccountNameByProgressID", encodeURIComponent(JSON.stringify(args)), function (result) {
-            accountName = result;
-            Ewin.confirm({ message: "确认要删除与台账【" + accountName + "】的数据同步关系吗？" }).on(function (e) {
-                if (!e) {
-                    return;
-                }
-                else {
-                    $.post("/Account/DelSynchroByProgressID", { "progressID": progressID }, function (result) {
-                        if (result === "ok") {
-                            toastr.success("操作成功！", "提示");
-                            $("#bsTable").bootstrapTable('refresh');
+        $.post("/ProgressInfo/CheckEdit", { "id": id }, function (result) {
+            if (result !== "ok") {
+                toastr.error("没有操作权限！", "提示");
+            }
+            else {
+                //根据当前行的id获取当前的行数据
+                var row = $("#bsTable").bootstrapTable('getRowByUniqueId', id);
+                var progressID = row.ProgressInfoID;
+                var args = { "progressID": progressID };
+                var accountName = "";
+                $.post("/Account/GetAccountNameByProgressID", encodeURIComponent(JSON.stringify(args)), function (result) {
+                    accountName = result;
+                    Ewin.confirm({ message: "确认要删除与台账【" + accountName + "】的数据同步关系吗？" }).on(function (e) {
+                        if (!e) {
+                            return;
+                        }
+                        else {
+                            $.post("/Account/DelSynchroByProgressID", { "progressID": progressID }, function (result) {
+                                if (result === "ok") {
+                                    toastr.success("操作成功！", "提示");
+                                    $("#bsTable").bootstrapTable('refresh');
+                                }
+                            });
                         }
                     });
-                }
-            });
+                });
+            }
         });
     };
+
     $(function () {
         function loadColumns() {
             var tempArray1 = [
@@ -585,7 +609,7 @@
             showRefresh: true,                  //是否显示刷新按钮
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
-            height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            height: 700,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "ProgressInfoID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
