修改组长查看权限，修改删除进度功能，增加保存功能

--- a/TenderInfo/Views/ProgressInfo/TableInfoProject.cshtml
+++ b/TenderInfo/Views/ProgressInfo/TableInfoProject.cshtml
@@ -30,15 +30,12 @@
         $("#tbxOtherExplainEdit").val(row.OtherExplain);
         $("#tbxRemarkEdit").val(row.Remark);
 
-        //if ($("#userRole").text().trim() != "招标管理") {
-        //    $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
-        //}
         $.post("/ProgressInfo/CheckEdit", { "id": id }, function (result) {
             if (result !== "ok") {
-                $("#btnEditProgressSubmit,#btnDelProgressSubmit").hide();
+                $("#btnEditProgressSubmit,#btnDelProgressSubmit,#btnEditProgressSave").hide();
             }
             else {
-                $("#btnEditProgressSubmit,#btnDelProgressSubmit").show();
+                $("#btnEditProgressSubmit,#btnDelProgressSubmit,#btnEditProgressSave").show();
             }
         });
     };
