--- a/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
@@ -275,6 +275,9 @@
                     <button type="button" id="btnDelProgressSubmit" class="btn btn-danger">
                         <i class="glyphicon glyphicon-remove"></i> 删除
                     </button>
+                    <button type="button" id="btnEditProgressSave" class="btn btn-success">
+                        <i class="glyphicon glyphicon-floppy-saved"></i> 保存
+                    </button>
                     <button type="button" id="btnEditProgressSubmit" class="btn btn-primary">
                         <i class="glyphicon glyphicon-ok"></i> 提交
                     </button>
@@ -460,6 +463,46 @@
                     );
                 }
             });
+        });
+
+        //删除招标进度
+        $("#btnDelProgressSubmit").click(function () {
+            Ewin.confirm({ message: "确定要删除吗？" }).on(function (e) {
+                if (!e) {
+                    return;
+                }
+                else {
+                    $.post("/ProgressInfo/Del", { "id": $("#tbxProgressIDEdit").val()  },
+                        function (data, textStatus, jqXHR) {
+                            if (data === "ok") {
+                                $("#EditProgressModal").modal("hide");
+                                toastr.success("操作成功！", "提示");
+                                $("#bsTable").bootstrapTable('refresh');
+                            }
+                        }
+                    );
+                }
+            });
+        });
+
+        //修改进度保存
+        $("#btnEditProgressSave").click(function () {
+            if (validEditProgressForm.form()) {
+                $("#EditProgressForm").ajaxSubmit({
+                    url: "/ProgressInfo/Update",
+                    type: "post",
+                    success: function (result) {
+                        if (result == "ok") {
+                            toastr.success("操作成功！", "提示");
+                            $("#bsTable").bootstrapTable('refresh');
+                        }
+                    },
+                    error: function (error) {
+                        toastr.error(error, "提示");
+                        return;
+                    }
+                });
+            };
         });
     });
 </script>
