增加资格审查方式字段，增加招标台账删除功能 修改不能招标台账显示

--- a/TenderInfo/Views/Account/EditAccountFrame.cshtml
+++ b/TenderInfo/Views/Account/EditAccountFrame.cshtml
@@ -638,7 +638,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderRestrictUnitPriceEdit">招标控制价--单价</label>
+                                <label for="tbxTenderRestrictUnitPriceEdit">招标控制价--单价（元）</label>
                                 <input id="tbxTenderRestrictUnitPriceEdit" name="tbxTenderRestrictUnitPriceEdit" class="form-control input-sm" placeholder="招标控制单价" />
                             </div>
                         </div>
@@ -652,7 +652,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="tbxTenderSuccessUnitPriceEdit">中标金额--单价</label>
+                                <label for="tbxTenderSuccessUnitPriceEdit">中标金额--单价（元）</label>
                                 <input id="tbxTenderSuccessUnitPriceEdit" name="tbxTenderSuccessUnitPriceEdit" class="form-control input-sm" placeholder="中标金额--单价" />
                             </div>
                         </div>
@@ -865,6 +865,12 @@
                         <button type="button" id="btnReturn" class="btn bg-black">
                             <i class="glyphicon glyphicon-share-alt"></i> 返回
                         </button>
+                        @if (User.IsInRole("新建招标台账"))
+                        {
+                            <button type="button" id="btnDel" class="btn btn-danger">
+                                <i class="glyphicon glyphicon-remove"></i> 删除
+                            </button>
+                        }
                     </div>
                 </form>
             </div>
@@ -978,7 +984,7 @@
         SetBtnState();
         function SetBtnState() {
             if ($("#userRoleEdit").text().trim() !== "yes") {
-                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd").hide();
+                $("#btnSubmit,#btnFirstImport,#btnFirstRemove,#btnSecondImport,#btnSecondRemove,#btnFirstAdd,#btnSecondAdd,#btnThirdAdd,#btnFourAdd,#btnFiveAdd,#btnSixAdd").hide();
             }
         }
 
@@ -1627,6 +1633,26 @@
             BackView();
         });
 
+        $("#btnDel").click(function () {
+            Ewin.confirm({ message: "确定要删除吗？" }).on(function (e) {
+                if (!e) {
+                    return;
+                }
+                else {
+
+                    $.post("/Account/Del", { id: $("#tbxAccountIDEdit").val() }, function (result) {
+                        if (result == "ok") {
+                            toastr.success("操作成功！", "提示");
+                            BackView();
+                        }
+                        else {
+                            toastr.error(error, "提示");
+                        }
+                    });
+                }
+            });
+        });
+
         function BackView() {
             var tenderInfo = unescape(getQueryString("tenderInfo"));//招标情况
             var projectName = unescape(getQueryString("projectName"));//项目名称
@@ -1689,6 +1715,7 @@
                 $("#tbxTenderSuccessPersonEdit").val(result.TenderSuccessPerson);
                 $("#tbxPlanInvestPriceEdit").val(result.PlanInvestPrice);
                 $("#tbxTenderRestrictUnitPriceEdit").val(result.TenderRestrictUnitPrice);
+                $("#tbxTenderRestrictSumPriceEdit").val(result.TenderRestrictSumPrice);
 
                 $("#tbxTenderSuccessUnitPriceEdit").val(result.TenderSuccessUnitPrice);
                 $("#tbxTenderSuccessSumPriceEdit").val(result.TenderSuccessSumPrice);
