--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -423,7 +423,7 @@
             [
                 {
                     valign: "top",
-                    title: '单价',
+                    title: '单价（元）',
                     cellStyle: function (value, row, index) {
                         return {
                             css: { "padding": "0px" }
@@ -458,7 +458,7 @@
                 {
                     field: 'account.TenderRestrictUnitPrice',
                     valign: "middle",
-                    title: '单价'
+                    title: '单价（元）'
                 },
                 {
                     field: 'account.TenderRestrictSumPrice',
@@ -468,7 +468,7 @@
                 {
                     field: 'account.TenderSuccessUnitPrice',
                     valign: "middle",
-                    title: '单价'
+                    title: '单价（元）'
                 },
                 {
                     field: 'account.TenderSuccessSumPrice',
@@ -955,7 +955,7 @@
             showRefresh: true,                  //是否显示刷新按钮
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
-            height: 700,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            //height: 700,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "AccountID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
