完善台账excel导出，进度修改为所有人可见

--- a/TenderInfo/Views/Account/TableInfoMaterial.cshtml
+++ b/TenderInfo/Views/Account/TableInfoMaterial.cshtml
@@ -434,6 +434,7 @@
                     formatter: function (value, row, index) {
                         return getJsonDateTime(row.account.InsertDate);
                     },
+                    visible: false,
                     title: '台账建立时间'
                 }
             ],
