--- a/TenderInfo/Views/Account/TableInfoFrame.cshtml
+++ b/TenderInfo/Views/Account/TableInfoFrame.cshtml
@@ -452,6 +452,7 @@
                     formatter: function (value, row, index) {
                         return getJsonDateTime(row.account.InsertDate);
                     },
+                    visible: false,
                     title: '台账建立时间'
                 }
             ],
